# Bevy.card_game

./: .gitignore  Cargo.toml  README.md  bevy_loader.js  justfile
.cargo/: config.toml
.github/workflows/: build_preview.yml  continuous_integration.yml  manual_prerelease_artifact.yml  prerelease_artifact.yml
card_game/: Cargo.toml  justfile
card_game/src/: main.rs
card_game/src/features/: cards.rs  deck.rs
card_game/src/features/cards/: cards_plugin.rs  mod.rs
card_game/src/features/deck/: deck_generator.rs  deck_plugin.rs  mod.rs
card_game/src/utils/: hover.rs  mod.rs  mouse.rs
card_game/src/utils/mouse/: click.rs  coordinates.rs  hover.rs  mod.rs
card_game/src/utils/test/: asset_loading.rs  count_entities.rs  mod.rs  test_plugins.rs
src/: lib.rs  main.rs  plugin.rs
src/features/: mod.rs
src/features/deck/: deck_plugin.rs  generator.rs  mod.rs
src/features/screen/: mod.rs
src/game/: card.rs  cards.rs  mod.rs
src/game/deck/: generator.rs  mod.rs
src/game/screen/: mod.rs  playing.rs
src/utils/: dev_tools.rs  mod.rs
src/utils/assets/: images.rs  loader.rs  mod.rs
src/utils/mouse/: click.rs  coordinates.rs  hover.rs  mod.rs
src/utils/test/: asset_loading.rs  mod.rs  test_plugins.rs
