[package]
name = "card_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0" }
rand = "0.8.5"

[profile.dev]
debug = 0
strip = "debuginfo"
opt-level = 0       # Switch to 1 for more runtime performance
# overflow-checks = false # Uncomment for better math performance

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
panic = 'abort'
debug = 0
strip = "debuginfo"
# lto = "thin" # Enable for more inlining with a bigger tradeoff in compile times

[profile.distribution]
inherits = "release"
strip = true
lto = "thin"
codegen-units = 1
